[package]
name = "git_annex_misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "^1.3.0", optional = true }

[features]
default = ["blake3_feature"]

blake3_feature = ["blake3"]

[[bin]]
name = "git-annex-backend-XBLAKE3"
required-features = ["blake3_feature"]
