[package]
name = "git_annex_misc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
blake3 = { version = "^1.3.0", optional = true }

[features]
default = ["blake3_feature"]

blake3_feature = ["blake3"]

[[bin]]
name = "git-annex-backend-XBLAKE3"
required-features = ["blake3_feature"]
